# 2s-complement-visualizer

./: Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
src/: app.css  main.rs
