[package]
name = "yew-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.3.0"
regex = "1.10.3"
wasm-bindgen = "0.2.91"
web-sys = "0.3.68"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
